@@ -1,1 +1,0 @@
-init com.arsdigita.docrepo.installer.Initializer { }
