@@ -104,7 +104,7 @@ public class Repository extends Application {
     }
 
     /**
-     * Retreives a repository from the database usings its OID.
+     * Constructor retrieves a repository from the database usings its OID.
      *
      * @param oid the OID of the repository
      */
@@ -324,4 +324,33 @@ public class Repository extends Application {
         }
         return null;
     }
+    /**
+     * Returns the servletPath part of the URL to the application servlet.
+     * (see Servlet API specification or web.URL for more information)
+     *
+     * The method overwrites the super class to provide an application specific
+     * location for servlets/JSP. This is necessary if you whish to install the
+     * module (application) along with others in one context. If you install the
+     * module into its own context (no longer recommended for versions newer
+     * than 1.0.4) you may use a standard location.
+     *
+     * Usually it is a symbolic name/path, which will be mapped in the web.xml
+     * to the real location in the file system. Example:
+     * <servlet>
+     *   <servlet-name>docrepo</servlet-name>
+     *   <servlet-class>com.arsdigita.docrepo.RepositoryServlet</servlet-class>
+     * </servlet>
+     *
+     * <servlet-mapping>
+     *   <servlet-name>docrepo</servlet-name>
+     *   <url-pattern>/docrepo/*</url-pattern>
+     * </servlet-mapping>
+     *
+     * @return ServelPath of the applications servlet
+     */
+    @Override
+    public String getServletPath() {
+        return "/docrepo/";
+    }
+
 }
