@@ -1,0 +1,18 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app         xmlns="http://java.sun.com/xml/ns/j2ee" 
+             xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd" 
+               version="2.4">
+
+    <!-- Servlets for the docrepo applications -->
+    <servlet>
+        <servlet-name>docrepo</servlet-name>
+        <servlet-class>com.arsdigita.docrepo.ui.DRServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>docrepo</servlet-name>
+        <url-pattern>/docrepo/*</url-pattern>
+    </servlet-mapping>
+
+</web-app>
